--- a/_posts/0000-01-02-tjc-code.md
+++ b/_posts/0000-01-02-tjc-code.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Hello friends, look at my big shiny slide!
 Use the left arrow to go back!
